--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -25,7 +25,7 @@
 
 [[main]]
   name = "Hafðu samband"
-  url = "contact/"
+  url = "#contact"
   weight = 60
 
 # Link to a PDF of your resume/CV from the menu.
