--- a/config/_default/menus.toml
+++ b/config/_default/menus.toml
@@ -17,16 +17,21 @@
   name = "Færslur"
   url = "post/"
   weight = 20
+  
+[[main]]
+  name = "Námskeið"
+  url = "teaching_material/"
+  weight = 50
 
 [[main]]
-  name = "Fræðsluefni"
+  name = "Tölfræði fyrir almenning"
   url = "courses/"
-  weight = 50
+  weight = 60
 
 [[main]]
   name = "Hafðu samband"
   url = "#contact"
-  weight = 60
+  weight = 70
 
 # Link to a PDF of your resume/CV from the menu.
 # To enable, copy your resume/CV to `static/files/cv.pdf` and uncomment the lines below.
